add tests for authentication and readme file
