# backend/docs/userService/swagger.json
@@ -15,7 +15,6 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
     "basePath": "/userservice/api",
     "paths": {
         "/auth": {
@@ -28,7 +27,7 @@
                         ]
                     }
                 ],
-                "description": "This Endpoint is used to check token in cookie header and renews it",
+                "description": "This Endpoint is used to check token in cookie header. The JWT token is additionally being refreshed.",
                 "consumes": [
                     "application/json"
                 ],
@@ -276,6 +275,23 @@
                         "in": "query"
                     }
                 ],
+                "responses": {}
+            }
+        },
+        "/oauth/logout": {
+            "get": {
+                "description": "This Endpoint is used to login user via google oauth provider - this endpoint triggers the process and redirects to the google authentication service",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/html"
+                ],
+                "tags": [
+                    "OAuth"
+                ],
+                "summary": "Logout process using google oauth",
+                "operationId": "logoaut-oauth",
                 "responses": {}
             }
         }
